@@ -10,14 +10,18 @@ in vec4 vertexColor;
 uniform mat4 mvp;
 
 // Output vertex attributes (to fragment shader)
+out vec3 fragPosition;
 out vec2 fragTexCoord;
+out vec3 fragNormal;
 out vec4 fragColor;
 
 // NOTE: Add here your custom variables
 
 void main() {
 	// Send vertex attributes to fragment shader
+	fragPosition = vertexPosition;
 	fragTexCoord = vertexTexCoord;
+	fragNormal = vertexNormal;
 	fragColor = vertexColor;
 
 	// Calculate final vertex position
