@@ -35,6 +35,7 @@ DETAILED CHANGES:
 	- ADDED: BUFFER_UNSIGNED_LONG and BUFFER_LONG.
 	- FIXED: Bitwise functions now use 64 bit integers.
 	- CHANGE: SetBufferData takes table of values.
+	- ADDED: Texture atlas repeat example.
 
 ------------------------------------------------------------------------
 Release:	ReiLua version 0.8.0		Using Raylib 5.0 and Forked Raygui 4.0
